# devai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
devai/: ai.py  cli.py  debugger.py  detector.py  generator.py
